[package]
name = "preferences"
version = "2.1.0"
authors = ["Andy Barron <AndrewLBarron@gmail.com>"]

description = "Read and write user-specific application data (in stable Rust)"
documentation = "https://docs.rs/preferences"
repository = "https://github.com/AndyBarron/preferences-rs"
readme = "README.md"
keywords = ["preferences", "user", "data", "persistent", "storage"]
license = "MIT"

[dependencies]
directories = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0.0"

[dev-dependencies]
serde_json = "1.0"
